--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 # add_library(dm_fall_2023 SHARED Natural/NATURAL.cpp
 #         main.cpp)
 add_executable(dm_fall_2023 main.cpp Natural/NATURAL.cpp
-        Natural/NZER_N_B.cpp
+        Natural/NZER_N_B.cpp Natural/SUB_NN_N.cpp
 )
