--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,5 +9,7 @@ add_executable(dm_fall_2023 main.cpp Natural/NATURAL.cpp
         Natural/NZER_N_B.cpp
         Natural/SUB_NN_N.cpp
         Natural/MUL_ND_N.cpp
+        Natural/SUB_NDN_N.cpp
         Integer/INTEGER.cpp
+        
 )
