MUL_Nk_N in file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(dm_fall_2023 main.cpp Natural/NATURAL.cpp
         Natural/NZER_N_B.cpp
         Natural/MUL_ND_N.cpp
         Integer/INTEGER.cpp
+        Natural/MUL_Nk_N.cpp
 )
