--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,9 @@ add_executable(dm_fall_2023 main.cpp Natural/NATURAL.cpp
         Natural/SUB_NN_N.cpp
         Natural/MUL_ND_N.cpp
         Natural/MUL_Nk_N.cpp
+        Natural/MUL_NN_N.cpp
         Natural/SUB_NDN_N.cpp
         Natural/DIV_NN_Dk.cpp
+        Natural/DIV_NN_N.cpp
         Integer/INTEGER.cpp
 )
