--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,5 +16,6 @@ add_executable(dm_fall_2023 main.cpp Natural/NATURAL.cpp
         Natural/SUB_NDN_N.cpp
         Natural/DIV_NN_Dk.cpp
         Natural/DIV_NN_N.cpp
+        Natural/MOD_NN_N.cpp
         Integer/INTEGER.cpp
 )
