--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Natural/GCF_NN_N.cpp
         src/Natural/LCM_NN_N.cpp
         src/Integer/INTEGER.cpp
+        src/Integer/TRANS_Z_N.cpp
 )
 target_include_directories(cls PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
