--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,5 +20,5 @@ add_executable(dm_fall_2023 main.cpp Natural/NATURAL.cpp
         Natural/GCF_NN_N.cpp
         Natural/LCM_NN_N.cpp
         Integer/INTEGER.cpp
-        Integer/ABS_Z_N.cpp
+        Integer/ABS_Z_Z.cpp
 )
