--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Integer/MUL_ZZ_Z.cpp
         src/Integer/DIV_ZZ_Z.cpp
         src/Integer/SUB_ZZ_Z.cpp
+        src/Integer/MOD_ZZ_Z.cpp
 )
 target_include_directories(cls PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
