--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Integer/DIV_ZZ_Z.cpp
         src/Integer/SUB_ZZ_Z.cpp
         src/Integer/MOD_ZZ_Z.cpp
+	src/Rational/INT_Q_B.cpp
 )
 target_include_directories(cls PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
