--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(dm_fall_2023 VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 20)
 # windows
-# set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
 
