--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,11 +33,12 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Integer/SUB_ZZ_Z.cpp
         src/Integer/MOD_ZZ_Z.cpp
         src/Rational/RATIONAL.cpp
-        src/Rational/RED_Q_Q.cpp
+	src/Rational/RED_Q_Q.cpp
         src/Rational/INT_Q_B.cpp
         src/Rational/TRANS_Z_Q.cpp
         src/Rational/TRANS_Q_Z.cpp
-        src/Polynomial/POLYNOMIAL.cpp
+	src/Polynomial/POLYNOMIAL.cpp
+        src/Rational/ADD_QQ_Q.cpp
 )
 target_include_directories(cls PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
@@ -46,8 +47,3 @@ target_link_libraries(calculator cls)
 
 add_executable(main examples/main.cpp)
 target_link_libraries(main cls)
-
-add_subdirectory(external/googletest)
-
-add_executable(test tests/natural_test.cpp)
-target_link_libraries(test cls gtest gmock pthread)
