--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,8 @@ target_link_libraries(calculator cls)
 
 add_executable(main examples/main.cpp)
 target_link_libraries(main cls)
+
+add_subdirectory(external/googletest)
+
+add_executable(test tests/natural_test.cpp)
+target_link_libraries(test cls gtest gmock pthread)
