--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Rational/TRANS_Q_Z.cpp
 	src/Polynomial/POLYNOMIAL.cpp
         src/Rational/ADD_QQ_Q.cpp
+		src/Polynomial/MUL_Pxk_P.cpp
 )
 target_include_directories(cls PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
