--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Integer/SUB_ZZ_Z.cpp
         src/Integer/MOD_ZZ_Z.cpp
         src/Rational/RATIONAL.cpp
-		    src/Rational/RED_Q_Q.cpp
+		src/Rational/RED_Q_Q.cpp
         src/Rational/INT_Q_B.cpp
         src/Rational/TRANS_Z_Q.cpp
         src/Rational/TRANS_Q_Z.cpp
@@ -42,7 +42,8 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Rational/MUL_QQ_Q.cpp
         src/Polynomial/POLYNOMIAL.cpp
         src/Polynomial/DEG_P_N.cpp
-		    src/Polynomial/MUL_Pxk_P.cpp
+		src/Polynomial/MUL_PQ_P.cpp
+		src/Polynomial/MUL_Pxk_P.cpp
 )
 target_include_directories(cls PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
