--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,19 +33,18 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Integer/SUB_ZZ_Z.cpp
         src/Integer/MOD_ZZ_Z.cpp
         src/Rational/RATIONAL.cpp
-		    src/Rational/RED_Q_Q.cpp
+        src/Rational/RED_Q_Q.cpp
         src/Rational/INT_Q_B.cpp
         src/Rational/TRANS_Z_Q.cpp
         src/Rational/TRANS_Q_Z.cpp
         src/Rational/ADD_QQ_Q.cpp
         src/Rational/SUB_QQ_Q.cpp
         src/Rational/MUL_QQ_Q.cpp
-        src/Rational/DIV_QQ_Q.cpp
+	src/Rational/DIV_QQ_Q.cpp
         src/Polynomial/POLYNOMIAL.cpp
-		    src/Polynomial/MUL_PQ_P.cpp
-		    src/Polynomial/MUL_Pxk_P.cpp
-  		  src/Polynomial/LED_P_Q.cpp
         src/Polynomial/DEG_P_N.cpp
+	src/Polynomial/MUL_Pxk_P.cpp
+		src/Polynomial/ADD_PP_P.cpp
 )
 target_include_directories(cls PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
@@ -54,8 +53,3 @@ target_link_libraries(calculator cls)
 
 add_executable(main examples/main.cpp)
 target_link_libraries(main cls)
-
-add_subdirectory(external/googletest)
-
-add_executable(test tests/natural_test.cpp)
-target_link_libraries(test cls gtest gmock pthread)
