--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Polynomial/LED_P_Q.cpp
         src/Polynomial/DEG_P_N.cpp
         src/Polynomial/MUL_PP_P.cpp
+        src/Polynomial/DIV_PP_P.cpp
+        src/Polynomial/MOD_PP_P.cpp
         src/Polynomial/DEP_P_P.cpp
 )
 target_include_directories(cls PUBLIC ${PROJECT_SOURCE_DIR}/include)
