--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.25)
-project(dm_fall_2023 VERSION 0.3)
+project(dm_fall_2023 VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
@@ -44,6 +44,7 @@ add_library(cls SHARED src/Natural/NATURAL.cpp
         src/Rational/MUL_QQ_Q.cpp
         src/Rational/DIV_QQ_Q.cpp
         src/Polynomial/POLYNOMIAL.cpp
+        src/Polynomial/OPERATORS.cpp
         src/Polynomial/ADD_PP_P.cpp
         src/Polynomial/SUB_PP_P.cpp
         src/Polynomial/MUL_PQ_P.cpp
